--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "@strapi/provider-upload-cloudinary": "^4.2.2",
     "@strapi/strapi": "4.1.12",
     "better-sqlite3": "7.4.6",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "pg-connection-string": "^2.5.0"
   },
   "author": {
     "name": "A Strapi developer"
